made some changes in sign up sign in

--- a/sign.html
+++ b/sign.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StudyBuddy</title>
+    <title>EduSphere</title>
     <link rel="stylesheet" href="sign.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
     <div id="wrapper">
         <div id="left">
             <div id="auth-form">
-                <div class="heading">STUDYBUDDY</div>
+                <div class="heading">EDUSPHERE</div>
                 <form id="signin-form">
                     <div>
                         <label>Email</label>
