--- a/navbar.html
+++ b/navbar.html
@@ -14,7 +14,7 @@
             <li>Home</li>
             <li>Group Study</li>
             <li>Library</li>
-            <li>Newsletters</li>
+            <a href="quiz.html"><li>Quiz</li></a>
             <li>Contact Us</li>
             <a href="sign.html"><li><button class="login-btn">Login</button></li></a>
         </ul>
