--- a/landing.html
+++ b/landing.html
@@ -229,7 +229,7 @@
             <button class="login">Log In</button>
             <button class="signup">Sign Up</button>
         </div> -->
-        <div class="logo">StudyBuddy</div>
+        <div class="logo">EduSphere</div>
         <div class="menu-toggle">☰</div>
         <ul class="nav-links">
             <li><a href="#">Group Study</a></li>
@@ -290,7 +290,7 @@
         </div>
     </section>
     <footer>
-        <p>&copy; 2025 StudyBuddy. All rights reserved.</p>
+        <p>&copy; 2025 EduSpjere. All rights reserved.</p>
     </footer>
     <script>
         document.querySelector('.menu-toggle').addEventListener('click', function() {
