--- a/landing.html
+++ b/landing.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduSphere</title>
     <link rel="stylesheet" href="landing.css">
     <link rel="stylesheet" href="navbar.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
+
 <body>
     <nav class="navbar">
         <div class="title">EDUSPHERE</div>
@@ -15,9 +18,13 @@
             <li>Home</li>
             <li>Group Study</li>
             <li>Library</li>
-            <a href="quiz.html"><li>Quiz</li></a>
+            <a href="quiz.html">
+                <li>Quiz</li>
+            </a>
             <li>Contact Us</li>
-            <a href="sign.html"><li><button class="login-btn">Login</button></li></a>
+            <a href="sign.html">
+                <li><button class="login-btn">Login</button></li>
+            </a>
         </ul>
     </nav>
     <div class="hero">
@@ -32,21 +39,24 @@
         <div class="container">
             <div class="features-grid">
                 <div class="feature">
-                    <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png" alt="Search icon">
+                    <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png"
+                        alt="Search icon">
                     <div>
                         <h3>Find the perfect study group for you</h3>
                         <p>Match based on interests and availability</p>
                     </div>
                 </div>
                 <div class="feature">
-                    <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png" alt="Better study icon">
+                    <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png"
+                        alt="Better study icon">
                     <div>
                         <h3>Better Study</h3>
                         <p>Improve your study time and analyze progress</p>
                     </div>
                 </div>
                 <div class="feature">
-                    <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png" alt="Less stress icon">
+                    <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png"
+                        alt="Less stress icon">
                     <div>
                         <h3>Less Stress</h3>
                         <p>Reduce stress and anxiety with StudyBuddy</p>
@@ -65,7 +75,8 @@
                         <p>I love using StudyBuddy for group study</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png" alt="" class="author-avatar">
+                        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png"
+                            alt="" class="author-avatar">
                         <div>John S.</div>
                     </div>
                 </div>
@@ -74,7 +85,8 @@
                         <p>StudyBuddy has made my life so much easier!</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png" alt="" class="author-avatar">
+                        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png"
+                            alt="" class="author-avatar">
                         <div>Emily P.</div>
                     </div>
                 </div>
@@ -83,7 +95,8 @@
                         <p>I use StudyBuddy every day for group study</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png" alt="" class="author-avatar">
+                        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png"
+                            alt="" class="author-avatar">
                         <div>Mike L.</div>
                     </div>
                 </div>
@@ -92,7 +105,8 @@
                         <p>StudyBuddy has helped me improve my grades</p>
                     </div>
                     <div class="testimonial-author">
-                        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png" alt="" class="author-avatar">
+                        <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/image-Nk1YaITp9hrGhvlCqiThJ5y5dp2d0f.png"
+                            alt="" class="author-avatar">
                         <div>Sarah T.</div>
                     </div>
                 </div>
@@ -144,7 +158,110 @@
         </div>
     </section>
 
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-brand">
+                    <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="2" y="2" width="20" height="20" rx="2" ry="2" />
+                        <circle cx="12" cy="12" r="4" />
+                    </svg>
+                    <p>Join our community of learners and achieve your academic goals with StudyBuddy. Connect,
+                        collaborate, and succeed together.</p>
+                    <div class="social-links">
+                        <a href="#" class="social-link">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z" />
+                            </svg>
+                        </a>
+                        <a href="#" class="social-link">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path
+                                    d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z" />
+                            </svg>
+                        </a>
+                        <a href="#" class="social-link">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <rect x="2" y="2" width="20" height="20" rx="5" ry="5" />
+                                <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z" />
+                                <line x1="17.5" y1="6.5" x2="17.51" y2="6.5" />
+                            </svg>
+                        </a>
+                        <a href="#" class="social-link">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2">
+                                <path
+                                    d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
+                                <rect x="2" y="9" width="4" height="12" />
+                                <circle cx="4" cy="4" r="2" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+                <nav class="footer-nav">
+                    <h4>Product</h4>
+                    <ul>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Study Groups</a></li>
+                        <li><a href="#">Resources</a></li>
+                    </ul>
+                </nav>
+                <nav class="footer-nav">
+                    <h4>Company</h4>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Careers</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Press</a></li>
+                    </ul>
+                </nav>
+                <nav class="footer-nav">
+                    <h4>Support</h4>
+                    <ul>
+                        <li><a href="#">Help Center</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Community</a></li>
+                        <li><a href="#">Status</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="newsletter">
+                <div class="newsletter-content">
+                    <h3>Stay up to date</h3>
+                    <p>Get the latest updates on new features and study tips delivered to your inbox.</p>
+                    <form class="newsletter-form" onsubmit="handleNewsletter(event)">
+                        <input type="email" class="newsletter-input" placeholder="Enter your email" required>
+                        <button type="submit" class="newsletter-button">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <div class="copyright">
+                    © 2024 StudyBuddy. All rights reserved.
+                </div>
+                <div class="footer-bottom-links">
+                    <a href="#">Terms of Service</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Cookie Settings</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+
+    </script>
+
     <script src="landing.js"></script>
     <script src="navbar.js"></script>
+    <script src="footer.js"></script>
 </body>
+
 </html>
