--- a/navbar.html
+++ b/navbar.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="title">EDUSPHERE</div>
+        <div class="title"><img src="EduSphere.png" alt="" style="height: 60px; width: 100px; padding-top: -50%  ;"></div>
         <div class="menu-toggle">☰</div>
         <ul>
-            <li>Home</li>
-            <li>Group Study</li>
-            <li>Library</li>
+            <a href="landing.html"><li>Home</li></a>
+            <a href="groupPage.html"><li>Group Study</li></a>
+            <a href="library.html"><li>Library</li></a>
             <a href="quiz.html"><li>Quiz</li></a>
-            <li>Contact Us</li>
+            <a href="feedback.html"><li>Contact Us</li></a>
             <a href="sign.html"><li><button class="login-btn">Login</button></li></a>
         </ul>
     </nav>
