--- a/landing.html
+++ b/landing.html
@@ -15,13 +15,11 @@
         <div class="title">EDUSPHERE</div>
         <div class="menu-toggle">☰</div>
         <ul>
-            <li>Home</li>
-            <li>Group Study</li>
-            <li>Library</li>
-            <a href="quiz.html">
-                <li>Quiz</li>
-            </a>
-            <li>Contact Us</li>
+            <a href="landing.html"><li>Home</li></a>
+            <a href="groupPage.html"><li>Group Study</li></a>
+            <a href="library.html"><li>Library</li></a>
+            <a href="quiz.html"><li>Quiz</li></a>
+            <a href="feedback.html"><li>Contact Us</li></a>
             <a href="sign.html">
                 <li><button class="login-btn">Login</button></li>
             </a>
