--- a/quiz.html
+++ b/quiz.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EduSphere- Quiz</title>
     <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="title">EDUSPHERE</div>
+        <div class="menu-toggle">☰</div>
+        <ul>
+            <a href="landing.html"><li>Home</li></a>
+            <a href="groupPage.html"><li>Group Study</li></a>
+            <a href="library.html"><li>Library</li></a>
+            <a href="quiz.html"><li>Quiz</li></a>
+            <a href="feedback.html"><li>Contact Us</li></a>
+            <a href="sign.html">
+                <li><button class="login-btn">Login</button></li>
+            </a>
+        </ul>
+    </nav>
     <div class="main">
+
         <div class="popup">
             <h2>Select Quiz Details</h2>
             <div class="choices">
@@ -65,5 +81,6 @@
         </div>
     </div>
     <script src="quiz.js"></script>
+    <script src="navbar.js"></script>
 </body>
 </html>
