--- a/feedback.html
+++ b/feedback.html
@@ -185,9 +185,11 @@
             <a href="library.html"><li>Library</li></a>
             <a href="quiz.html"><li>Quiz</li></a>
             <a href="feedback.html"><li>Contact Us</li></a>
-            <a href="sign.html"><li><button class="login-btn">Login</button></li></a>
+            <a href="sign.html">
+                <li><button class="login-btn">Login</button></li>
+            </a>
         </ul>
-    </nav> 
+    </nav>
     <br><br>
     <!-- <button class="theme-toggle" onclick="toggleTheme()" style="width: 150px;">Dark Mode</button> -->
     <div class="container">
