--- a/library.html
+++ b/library.html
@@ -1,57 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudyBuddy Library</title>
     <link rel="stylesheet" href="library.css">
+    <link rel="stylesheet" href="navbar.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
-<div class="library-container">
-    <!-- Sidebar for Categories -->
-    <aside class="library-sidebar" id="sidebar">
-        <h2>Categories</h2>
-        <ul id="category-list">
-            <li data-category="all" class="active">📚 All Materials</li>
-            <li data-category="pdf">📄 Question Bank</li>
-            <li data-category="notes">📝 Notes</li>
-            <li data-category="books">📖 Books</li>
-            <li data-category="videos">🎥 Videos</li>
+    <nav class="navbar">
+        <div class="title">EDUSPHERE</div>
+        <div class="menu-toggle">☰</div>
+        <ul>
+            <a href="landing.html"><li>Home</li></a>
+            <a href="groupPage.html"><li>Group Study</li></a>
+            <a href="library.html"><li>Library</li></a>
+            <a href="quiz.html"><li>Quiz</li></a>
+            <a href="feedback.html"><li>Contact Us</li></a>
+            <a href="sign.html">
+                <li><button class="login-btn">Login</button></li>
+            </a>
         </ul>
-    </aside>
+    </nav>
 
-    <!-- Main Library Section -->
-    <main class="library-main">
-        <header class="library-header">
-            <h2>Library Resources</h2>
-            <button class="hamburger" id="hamburger">&#9776;</button>
-            <button class="close-sidebar" id="close-sidebar" style="display: none;">&times;</button>
-            <div class="header-controls">
-                <button id="toggle-upload-btn">Upload Material</button>
-                <input type="text" id="search-input" placeholder="Search materials...">
+    <div class="library-container">
+        <!-- Sidebar for Categories -->
+        <aside class="library-sidebar" id="sidebar">
+            <h2>Categories</h2>
+            <ul id="category-list">
+                <li data-category="all" class="active">📚 All Materials</li>
+                <li data-category="pdf">📄 Question Bank</li>
+                <li data-category="notes">📝 Notes</li>
+                <li data-category="books">📖 Books</li>
+                <li data-category="videos">🎥 Videos</li>
+            </ul>
+        </aside>
+
+        <!-- Main Library Section -->
+        <main class="library-main">
+            <header class="library-header">
+                <h2>Library Resources</h2>
+                <button class="hamburger" id="hamburger">&#9776;</button>
+                <button class="close-sidebar" id="close-sidebar" style="display: none;">&times;</button>
+                <div class="header-controls">
+                    <button id="toggle-upload-btn">Upload Material</button>
+                    <input type="text" id="search-input" placeholder="Search materials...">
+                </div>
+            </header>
+
+            <!-- Upload Section (Initially Hidden) -->
+            <div id="upload-section" class="upload-container" style="display: none;">
+                <h3>Upload Your Material</h3>
+                <input type="text" id="material-title" placeholder="Enter Title">
+                <select id="material-type">
+                    <option value="notes">Notes</option>
+                    <option value="pdf">Question Bank</option>
+                    <option value="books">Books</option>
+                    <option value="videos">Videos</option>
+                </select>
+                <input type="file" id="material-file">
+                <button id="upload-btn">Upload</button>
             </div>
-        </header>
 
-        <!-- Upload Section (Initially Hidden) -->
-        <div id="upload-section" class="upload-container" style="display: none;">
-            <h3>Upload Your Material</h3>
-            <input type="text" id="material-title" placeholder="Enter Title">
-            <select id="material-type">
-                <option value="notes">Notes</option>
-                <option value="pdf">Question Bank</option>
-                <option value="books">Books</option>
-                <option value="videos">Videos</option>
-            </select>
-            <input type="file" id="material-file">
-            <button id="upload-btn">Upload</button>
-        </div>
+            <div id="library-items" class="library-items"></div>
+        </main>
+    </div>
 
-        <div id="library-items" class="library-items"></div>
-    </main>
-</div>
-
-<script src="library.js"></script>
+    <script src="library.js"></script>
+    <script src="navbar.js"></script>
 </body>
+
 </html>
