linked about us page

--- a/landing.html
+++ b/landing.html
@@ -212,7 +212,7 @@
                 <nav class="footer-nav">
                     <h4>Company</h4>
                     <ul>
-                        <li><a href="#">About Us</a></li>
+                        <li><a href="aboutus.html">About Us</a></li>
                         <li><a href="#">Careers</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">Press</a></li>
