--- a/video-call-app/public/video-call.html
+++ b/video-call-app/public/video-call.html
@@ -199,11 +199,21 @@
         <div class="title">EDUSPHERE</div>
         <div class="menu-toggle">☰</div>
         <ul>
-            <a href="landing.html"><li>Home</li></a>
-            <a href="groupPage.html"><li>Group Study</li></a>
-            <a href="library.html"><li>Library</li></a>
-            <a href="quiz.html"><li>Quiz</li></a>
-            <a href="feedback.html"><li>Contact Us</li></a>
+            <a href="landing.html">
+                <li>Home</li>
+            </a>
+            <a href="groupPage.html">
+                <li>Group Study</li>
+            </a>
+            <a href="library.html">
+                <li>Library</li>
+            </a>
+            <a href="quiz.html">
+                <li>Quiz</li>
+            </a>
+            <a href="feedback.html">
+                <li>Contact Us</li>
+            </a>
             <a href="sign.html">
                 <li><button class="login-btn">Login</button></li>
             </a>
@@ -233,11 +243,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
     <script>
-        const peer = new Peer(undefined, {
-            host: '/',
-            port: 3000,
-            path: '/peerjs'
-        });
+        // const peer = new Peer(undefined, {
+        //     host: '/',
+        //     port: 3000,
+        //     path: '/peerjs'
+        // });
 
         const myVideo = document.getElementById('myVideo');
         const peerVideo = document.getElementById('peerVideo');
@@ -300,6 +310,13 @@
         // Notify When Connected
         peer.on('open', id => {
             console.log(`Connected with Peer ID: ${id}`);
+        });
+
+        const SERVER_URL = "https://edusphere-dvyv.onrender.com";
+        const peer = new Peer(undefined, {
+            host: SERVER_URL.replace("https://", ""),
+            port: 443,
+            secure: true
         });
     </script>
 </body>
